# ZeroBridge

./: README.md  TECHNICAL_ARCHITECTURE.md
config/: chains.json  coordinator.toml  relayer-config.toml  tokens.toml
evm/: package.json
evm/artifacts/@openzeppelin/contracts/access/IAccessControl.sol/: IAccessControl.dbg.json
evm/artifacts/@openzeppelin/contracts/token/ERC20/IERC20.sol/: IERC20.dbg.json
evm/artifacts/@openzeppelin/contracts/token/ERC20/utils/SafeERC20.sol/: SafeERC20.dbg.json
evm/artifacts/@openzeppelin/contracts/utils/Panic.sol/: Panic.dbg.json
evm/artifacts/@openzeppelin/contracts/utils/math/SafeCast.sol/: SafeCast.dbg.json
evm/artifacts/contracts/EVMGateway.sol/: EVMGateway.dbg.json  EVMGateway.json
evm/cache/: solidity-files-cache.json
evm/contracts/: EVMGateway.sol
mina-gateway/: README.md  package-lock.json  package.json  tsconfig.json
mina-gateway/src/: compile.js  compile.ts  mina-gateway.js  mina-gateway.ts
near-adapter/: Cargo.toml  README.md
near-adapter/src/: lib.rs
osmosis_ibc/: Cargo.toml  NOTICE
osmosis_ibc/examples/: schema.rs
osmosis_ibc/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
relayer/: Cargo.toml  README.md
relayer/src/: config.rs  coordinator_client.rs  database.rs  event_listener.rs  main.rs  metrics.rs  p2p_network.rs  stake_manager.rs  transaction_executor.rs
scripts/: deploy-all-contracts.sh  monitor.sh  setup-zcash-node.sh  start-coordinator.sh  start-relayer.sh  test-bridge-e2e.sh  test-bridge.py
solana_gateway/: Anchor.toml
solana_gateway/programs/solana_gateway/: Cargo.toml
solana_gateway/programs/solana_gateway/src/: lib.rs
solana_gateway/tests/: solana_gateway.ts
starkenet_gateway/: Scarb.toml
starkenet_gateway/src/: events.cairo  lib.cairo  types.cairo
starkenet_gateway/src/contract/: zero_bridge_gateway.cairo
starkenet_gateway/src/interfaces/: ierc20.cairo  izero_bridge_gateway.cairo
starkenet_gateway/tests/: test_contract.cairo
zcash-coordinator/: Cargo.toml  README.md
zcash-coordinator/src/: config.rs  database.rs  lib.rs  liquidity_manager.rs  main.rs  rpc_server.rs  shielded_pool.rs  token_registry.rs  zcash_client.rs
