[package]
name = "zerobridge-relayer"
version = "1.0.0"
edition = "2021"
authors = ["ZeroBridge Team <dev@zerobridge.io>"]
description = "ZeroBridge Relayer - Decentralized transaction relay network"
license = "MIT"

[[bin]]
name = "zerobridge-relayer"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for coordinator communication)
reqwest = { version = "0.11", features = ["json"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# EVM chains
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Solana
solana-client = "1.16"
solana-sdk = "1.16"

# NEAR
near-jsonrpc-client = "0.6"

# P2P networking
libp2p = { version = "0.53", features = ["tcp", "noise", "mplex", "gossipsub", "mdns"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Utilities
hex = "0.4"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
