
[package]
name = "zcash-coordinator"
version = "1.0.0"
edition = "2021"
authors = ["ZeroBridge Team <dev@zerobridge.io>"]
description = "ZeroBridge Zcash Coordinator - Direct integration with official Zcash libraries"
license = "MIT"

[[bin]]
name = "zcash-coordinator"
path = "src/main.rs"

[dependencies]
# ============================================
# OFFICIAL ZCASH LIBRARIES (Direct Usage)
# No wrapper/integration layer needed!
# ============================================

# Core Zcash primitives
librustzcash = "0.13"
zcash-primitives = { version = "0.13", features = ["transparent-inputs"] }
zcash-proofs = "0.13"
zcash-client-backend = "0.11"

# Shielded protocols
orchard = "0.7"
sapling-crypto = "0.1"

# Note encryption
zcash_note_encryption = "0.4"

# ZK proof system
halo2_proofs = { version = "0.3", features = ["dev-graph"] }
halo2_gadgets = "0.3"

# Merkle trees
incrementalmerkletree = "0.5"

# Curve operations
group = { version = "0.13", default-features = false }
jubjub = "0.10"
pasta_curves = "0.5"

# Cryptography
blake2b_simd = "1.0"
blake2s_simd = "1.0"
sha2 = "0.10"
hex = "0.4"

# Serialization for Zcash types
borsh = "1.0"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP/RPC
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# EVM chains
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Solana
solana-client = "1.16"
solana-sdk = "1.16"

# NEAR
near-jsonrpc-client = "0.6"

# Utilities
futures = "0.3"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["testnet"]
testnet = []
mainnet = []