# contracts/solana/programs/solana-gateway/Cargo.toml
[package]
name = "solana-gateway"
version = "1.0.0"
description = "ZeroBridge Solana Gateway - Privacy-preserving cross-chain bridge"
edition = "2021"
license = "MIT"
repository = "https://github.com/zerobridge/zerobridge"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_adapter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token"] }
# Secp256k1 signature recovery
solana-secp256k1-recover = "2.1.0"
sha3 = "0.10"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1